--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,14 @@ body {
 }
 
 .visually-hidden {
-  margin: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
   padding: 0;
-  visibility: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .page-header {
@@ -63,7 +68,7 @@ body {
 
 .header-logo-link {
   padding-left: 70px;
-  margin-right: 46px;
+  margin-right: 28px;
   z-index: 1;
 }
 
@@ -74,6 +79,7 @@ body {
 .navigation-main {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -83,13 +89,13 @@ body {
 .navigation-user {
   padding-right: 70px;
   justify-content: flex-end;
-}
-
-.navigation-main-item:not(:last-child) {
-  margin-right: 32px;
+  width: 268px;
+  margin-left: auto;
 }
 
 .navigation-main-link {
+  display: block;
+  padding: 20px 16px;
   font-size: 20px;
   line-height: 24px;
   color: #000;
@@ -98,18 +104,40 @@ body {
   background-color: #fff;
 }
 
+.button-search,
+.button-favorite {
+  min-width: 44px;
+  min-height: 64px;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  background-color: #ffffff;
+}
+
+.button-search {
+  background-image: url("../images/header/search.svg");
+}
+
+.button-favorite {
+  background-image: url("../images/header/heart.svg");
+}
+
 .want-here,
 .hotels-more {
+  display: block;
   font-size: 16px;
   line-height: 20px;
-  text-align: center;
   background-color: #756157;
   text-decoration: none;
   text-transform: uppercase;
   color: #ffffff;
 
-  padding: 8px 34px;
+  padding: 8px 26px;
   border-radius: 4px;
+}
+
+.want-here {
+  margin-left: 29px;
 }
 
 .main-container {
@@ -120,7 +148,6 @@ body {
 }
 
 .hero {
-  /* height: 542px; */
   background-image: url("../images/backgrounds/welcome-background-divider.png"),
     url("../images/backgrounds/welcome-background.jpg");
   background-repeat: no-repeat;
@@ -129,19 +156,19 @@ body {
     0 0;
   background-size: 100% auto;
   background-color: #9b9797;
+  margin-bottom: 69px;
 }
 
 .hero-image-main {
   display: block;
   margin: 0 auto;
-  padding-top: 30px;
+  padding-top: 51px;
   padding-bottom: 82px;
 }
 
 .gallery-title {
   margin: 0;
   padding: 0;
-  padding-top: 48px;
   margin-bottom: 25px;
   font-size: 30px;
   line-height: 36px;
@@ -151,7 +178,6 @@ body {
 .gallery-subscription {
   margin: 0;
   padding: 0;
-  text-align: center;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
@@ -399,43 +425,49 @@ body {
   background-color: #7db54f;
 }
 
-.page-footer{
+.page-footer {
   display: flex;
   justify-content: space-between;
   background-color: #ffffff;
+  padding-top: 45px;
 }
 
-.socials{
-  padding-top: 45px;
-  padding-left: 70px;margin-bottom: 20px;
+.socials {
+  padding-left: 70px;
+  margin-bottom: 20px;
+  width: 200px;
 }
 
 .social-list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.social-item{
+.social-link {
+  display: block;
   background-repeat: no-repeat;
+  background-position: center;
+  min-width: 47px;
+  min-height: 40px;
 }
 
-.social-item-vk{
+.social-link-vk {
   background-image: url("../images/socials/socials-vk.svg");
 }
 
-.social-item-telegram{
+.social-link-telegram {
   background-image: url("../images/socials/socials-telegram.svg");
 }
 
-.social-item-youtube{
+.social-link-youtube {
   background-image: url("../images/socials/socials-youtube.svg");
 }
 
 .phone {
   width: 335px;
-  padding-top: 45px;
   margin-bottom: 35px;
 }
 
@@ -452,7 +484,6 @@ body {
 
 .academy-logo {
   width: 115px;
-  padding-top: 45px;
   padding-right: 70px;
   margin-bottom: 38px;
 }
@@ -466,11 +497,14 @@ body {
 
 .wrapper-background {
   color: #ffffff;
-  background-color: #5e5050;
   background-image: url("../images/backgrounds/hotels-background.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  padding: 35px 70px 0;
+  padding: 35px 70px 73px;
+}
+
+.inner-header {
+  margin-bottom: 40px;
 }
 
 .inner-header h1 {
@@ -478,35 +512,125 @@ body {
   padding: 0;
   font-size: 60px;
   line-height: 78px;
+  margin-bottom: 8px;
 }
 
-.breadcrumbs-list{
+.breadcrumbs-list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.breadcrumbs-item-home{
+.breadcrumbs-link-home {
+  display: block;
+  min-width: 12px;
+  min-height: 12px;
   background-image: url("../images/hotels/breadcrumbs-home.svg");
   background-repeat: no-repeat;
+  background-position: center;
+  padding: 5px;
+  margin-right: 23px;
 }
 
-.hotels-filter-form{
+.hotels-filter-form {
   display: flex;
+}
+
+.filter-group {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.filter-group-pool {
+  width: 150px;
+  margin-right: 70px;
+}
+
+.filter-group-housing {
+  width: 150px;
+  margin-right: 140px;
+}
+
+.filter-group-costs {
+  width: 288px;
+  margin-right: 70px;
+}
+
+.input-costs {
+  margin-bottom: 36px;
+}
+
+.filter-group-buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.control {
+  margin-bottom: 32px;
+}
+
+.filter-label {
+  margin: 0;
+  padding: 0;
+}
+
+.control-input {
+  margin: 0;
+  padding: 0;
+  margin-right: 16px;
+}
+
+.filter-label:not(:last-child) {
+  margin-bottom: 19px;
+}
+
+.cost-wrap {
+  display: flex;
+}
+
+.input-costs {
+  width: 143px;
+}
+
+.button-submit {
+  margin-top: 56px;
+}
+
+.button-reset {
+  margin-top: auto;
 }
 
 .hotels {
   background-color: #ffffff;
-  padding: 0 70px;
+  padding: 50px 70px 0;
 }
 
-.hotels-controls-wrap{
+.hotels-controls-wrap {
   display: flex;
   align-items: center;
+  margin-bottom: 44px;
 }
 
-.hotels-list{
+.hotels-controls-wrap h2 {
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+  margin-right: 200px;
+}
+
+.select-control {
+  width: 292px;
+  margin-right: 70px;
+}
+
+.hotels-list {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -551,43 +675,72 @@ body {
   color: #333333;
 }
 
-.view-buttons-list{
+.view-buttons-list {
   display: flex;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.view-button{
+.view-button {
+  display: block;
+  min-width: 48px;
+  min-height: 48px;
   background-repeat: no-repeat;
+  background-position: center;
+  border: 2px solid #e5e5e5;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
-.view-button-grid{
+.view-button-selected {
+  border-color: #000000;
+}
+
+.view-buttons-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.view-button-grid {
   background-image: url("../images/hotels/view-grid.svg");
 }
 
-.view-button-card{
+.view-button-card {
   background-image: url("../images/hotels/view-card.svg");
 }
 
-.view-button-list{
+.view-button-list {
   background-image: url("../images/hotels/view-list.svg");
 }
 
 .hotels-list {
   display: flex;
   flex-wrap: wrap;
-  margin: 0;
+  justify-content: space-between;
+  width: 100%;
   padding: 0;
-  gap: 10px;
+  margin: 0;
+  gap: 20px;
+  margin-bottom: 80px;
 }
 
 .hotels-item {
+  display: flex;
+  flex-direction: column;
   width: 340px;
   border: 1px solid #e6e6e6;
+  border-radius: 4px;
+  box-sizing: border-box;
+  padding: 20px;
+  gap: 16px;
 }
 
-.hotels-item img {
+.hotel-image-link {
+  order: -1;
+  align-self: center;
+}
+
+.hotel-image-link img {
   display: block;
 }
 
@@ -603,7 +756,28 @@ body {
   text-decoration: none;
 }
 
+.hotel-title h3 {
+  margin: 0;
+  padding: 0;
+}
+
+.hotels-more {
+  width: 140px;
+  box-sizing: border-box;
+}
+
+.hotel-cost-wrap,
+.hotel-buttons-wrap,
+.hotel-rating-wrap {
+  display: flex;
+  justify-content: space-between;
+}
+
 .hotel-rating {
+  display: block;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   width: 140px;
   font-weight: 400;
   font-size: 16px;
@@ -616,25 +790,36 @@ body {
 
 .pagination {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
+  list-style-type: none;
+  margin-bottom: 60px;
 }
 
-.pagination-item {
+.pagination-item:not(:last-child) {
   margin-right: 8px;
 }
 
 .pagination-link {
+  display: block;
+  box-sizing: border-box;
   color: #ffffff;
   background-color: #82b3d3;
   font-size: 20px;
   line-height: 36px;
-  padding: 11px 18px 12px 18px;
+  text-decoration: none;
+  padding: 11px 24px 12px 23px;
   border-radius: 4px;
 }
 
 .pagination-current {
   background-color: #f2f2f2;
+  color: #000000;
+}
+
+.pagination-more {
+  background-color: #ffffff;
   color: #000000;
 }
 
